apply aarch64 and Java17